# CRM_selenium

./: .gitignore  Makefile  README.md  conftest.py  hướng dẫn sử dụng.md  pyproject.toml
automation/: automation_users.py  test.py
config/: browser_config.py  settings.py
data/: datatest_login.xlsx  datatest_role.xlsx  datatest_users.xlsx
pages/base/: base_actions.py  base_locators.py  base_page.py
pages/login/: login_actions.py  login_locators.py  login_page.py
pages/role/: role_actions.py  role_locators.py  role_page.py
pages/template_page/: template_actions.py  template_locators.py  template_page.py
pages/users/: users_actions.py  users_locators.py  users_page.py
pages/users/import_file/: users_success.xlsx  users_validate.xlsx
scripts/: run_mypy.py
tests/: test_login.py  test_role.py  test_template_page.py  test_users.py
utils/: data_helpers.py  data_loader.py  debug_helpers.py  driver_manager.py  import_export_helper.py  logger.py  pytest_data_helpers.py  screenshot.py  setup_pythonpath.py
